After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652986 - rtpjitterbuffer: events are not serialized
rtpjitterbuffer: events are not serialized
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-06-20 09:35 UTC by Miguel Angel Cabrera Moya
Modified: 2013-12-10 11:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix for the bug report (10.00 KB, patch)
2011-06-29 11:19 UTC, Miguel Angel Cabrera Moya
rejected Details | Review

Description Miguel Angel Cabrera Moya 2011-06-20 09:35:02 UTC
When sending a serialized event to the rtpjitterbuffer source pad it is not serialized with the received rtp buffers.
Comment 1 Miguel Angel Cabrera Moya 2011-06-29 11:19:22 UTC
Created attachment 190920 [details] [review]
fix for the bug report
Comment 2 Olivier Crête 2013-10-13 16:30:22 UTC
This makes even more sense now that we have GAP events and such, but needs porting past Wim's recent changes.
Comment 3 Wim Taymans 2013-12-10 11:02:40 UTC
commit eee515cb2c1367b4bd60f3e19251f42c3edd6ffe
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Tue Dec 10 11:57:37 2013 +0100

    rtpjitterbuffer: serialize events in the buffer
    
    Serialize events into the jitterbuffer by inserting them with a -1
    seqnum.
    Update unit test to expect events from the streaming thread.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=652986